--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    Este texto terá <b></b> essa parte <b></b> em negrito
+<h3>treino de laço pé com daniel alfaro willian almeida<h3>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/oZAGcCigTTA?si=H6zABrdP6IWWw0Vz" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </body>
-</html>
+</html
