--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h3>treino de laço pé com daniel alfaro willian almeida<h3>
+<h3 class="primeiro-título" treino de laço pé com Daniel Alfaro e Willian Almeida h3>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/oZAGcCigTTA?si=H6zABrdP6IWWw0Vz" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<h3 class="segundo-título" Cassio Dias parando Man Hater h3>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/-32AtAWxijQ?si=WzE3catqSwKdMqzI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </body>
 </html
