--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
 <h1> Vídeos sobre Rodeio</h1>
 <nav>
-    <a href="#">home</a>
+    <a href="#">Home</a>
     <a href="">Rodeio</a>
 </nav>
 
