--- a/index.html
+++ b/index.html
@@ -15,9 +15,18 @@
 </nav>
 
     </header>
+
+    <section>
+    <div>
 <h3 class="primeiro-título" treino de laço pé com Daniel Alfaro e Willian Almeida h3>
+   
     <iframe width="560" height="315" src="https://www.youtube.com/embed/oZAGcCigTTA?si=H6zABrdP6IWWw0Vz" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-<h3 class="segundo-título" Cassio Dias parando Man Hater h3>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/-32AtAWxijQ?si=WzE3catqSwKdMqzI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+</div>
+<div>
+    <h3 class="segundo-título" Cassio Dias parando Man Hater h3>
+    
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/-32AtAWxijQ?si=WzE3catqSwKdMqzI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+   </div>
+</section>
 </body>
 </html
